--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
 
 .btn:hover {
     box-shadow: 2px 2px 10px greenyellow;
+    color: #adf020;
     background-color: rgba(255,255,255,0.4);
     transition: all 300ms ease;
 }
